tests/paczka1/fuzzy1/16605662.err
Error in line 2: fV8k362IU S43 31,45
Error in line 1: fV8k362IU A366 97,2
Error in line 6: fWT0ff5 S682 71,3
Error in line 10: S682 S43 71,7
Error in line 12: S682 A747 13,5
Error in line 13: cvK S43 35,4
Error in line 21: cvK S682 37,4
Error in line 30: cvK A366 1,2
